cabal-version: >=1.10
name: Disson
version: 0.1.0.0
license: AGPL-3
license-file: LICENSE
maintainer: rookie1286@gmail.com
author: rookie1024
build-type: Simple
extra-source-files:
    CHANGELOG.md

executable Disson
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        Disson
        Util
        Waves
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <4.13
