cabal-version: >=2.0
name: Disson
version: 0.1.0.0
license: AGPL-3
license-file: LICENSE
maintainer: rookie1286@gmail.com
author: rookie1024
build-type: Simple
extra-source-files:
    CHANGELOG.md

executable disson
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        Disson
        Util
        Waves
    default-language: Haskell2010
    build-depends:
        base ^>=4.14,
        hmatrix ^>= 0.20.0,
        vector ^>= 0.12.0
